<resources>
    <string name="app_name">Green Urth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_location">Location</string>
    <string name="title_information_centre">Information Centre</string>
    <string name="title_news_and_event">News and Event</string>

    //Information Centre
    <string name="recyclable_item_list_title">Recyclable items:</string>
    <string name="recyclable_item_name">Recyclable Item Name</string>
    <string name="recyclable_item_image">Recyclable Item Image</string>
    <string name="paper">Paper</string>
    <string name="plastic">Plastic</string>
    <string name="cardboard">Cardboard</string>
    <string name="glass">Glass</string>
    <string name="aluminium_cans">Aluminium cans</string>
    <string name="juice_and_milk_cartons">Juice and milk cartons</string>
    <string name="add_info">Add Info</string>
    <string name="edit_or_delete_info">Edit/Delete Info</string>

    //PROFILE
    //Login Page Strings
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>

    //Registration strings
    <string name="register_password">Enter Password:</string>
    <string name="register_email">Enter Email Address:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password_via_mail">Enter registered email address to reset password</string>

    //Profile Strings
    <string name="organisationName">Organisation</string>
    <string name="address">Address</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="orgContactNo">Contact No</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="go_profile_details">Profile Details</string>
    <string name="go_logout">Logout</string>

    //NEWS AND EVENT
    <string name="news">News</string>
    <string name="event">Event</string>
    <string name="news_example">This is an example of news</string>
    <string name="event_example" />
    <string name="title_activity_news_and_event">NewsAndEvent</string>
    <string name="add_news">Add News</string>
    <string name="add_event">Add Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_title">Your Title</string>
    <string name="add_link">Paste your link here</string>
    <string name="required">Required</string>
    <string name="date">Date of Event: </string>
    <string name="channel_name">Notification Channel</string>
    <string name="event_image">Event</string>
    <string name="add_description">Enter your description here</string>
    <string name="date_format">31.12.19</string>
    <string name="description">Descrption:</string>
    <string name="title">Title</string>
    <string name="edit_news">Edit News</string>
    <string name="delete_news">Delete news</string>
    <string name="delete_event">Delete event</string>
    <string name="edit_event">Edit event</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="update_confirmation">Are you sure you want to update?</string>

    //Location
    <string name="location_name">Location Name</string>
    <string name="location_address">Location Address</string>
    <string name="location_operation">Operation</string>
    <string name="location_image">Location image</string>
    <string name="save">Save</string>
    <string name="locationOperation">Operation day and time</string>
    <string name="location_address1">Address 1</string>
    <string name="location_address2">Address 2</string>
    <string name="location_address3">Address 3</string>
    <string name="locationTo">To</string>
    <string name="locationOperationDay">Operation Day</string>
    <string name="locationOperationTime">Operation Time</string>
    <string-array name="day_array">
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
</resources>
