<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android.homepage.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.android.homepage.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.android.homepage.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_information_centre"
        android:name="com.example.android.homepage.ui.information_centre.InformationCentreFragment"
        android:label="@string/title_information_centre"
        tools:layout="@layout/fragment_information_centre" >
        <action
            android:id="@+id/action_navigation_information_centre_to_displayItemInfoFragment"
            app:destination="@+id/displayItemInfoFragment"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news_and_event"
        android:name="com.example.android.homepage.ui.news_and_event.NewsAndEventFragment"
        android:label="@string/title_news_and_event"
        tools:layout="@layout/fragment_news_and_event" />
    <fragment
        android:id="@+id/displayItemInfoFragment"
        android:name="com.example.android.homepage.ui.information_centre.DisplayItemInfoFragment"
        android:label="fragment_display_item_info"
        tools:layout="@layout/fragment_display_item_info" >
        <argument
            android:name="itemName"
            app:argType="string" />
        <argument
            android:name="itemInfoLink"
            app:argType="string" />
    </fragment>
</navigation>